# INSAnonym-utils

./: ,  .gitignore  README.md  parser.cfg  pyproject.toml  runner.html
.github/workflows/: docs.yml  main.yml
docs/: README.md  algorithmes.md  algorithms.html  creation-algorithmes.md  index.html  insanonym-metrics.md  models.html  premiers-pas.md  runner.html  user-documentation-insanonym.md  utils.html
docs/code/insanonym_utils/: algorithms.md  index.md  main.md  models.md  runner.md  utils.md
insanonym_utils/: F_user_7_0d54717e83a17d6eb39491c4a3f9eaa27a776572b769f9c7af6c23195f70fa6c  __init__.py  algorithms.html  algorithms.py  config.py  main.html  main.py  models.py  runner.py  utils.html  utils.py
insanonym_utils/modules/: Dataframe.py  FileConfig.py
metrics/: dateUtil.py  hourUtil.py  naive.py  runner.py  utility_POI.py  utility_distance.py  utility_meet.py  utility_tuile.py
tests/: parser.cfg  test_anon  test_anon.py  test_dataset.csv
tests/custom_algorithms/: pseudo2.py
