[tool.poetry]
name = "insanonym-utils"
version = "0.5.0"
description = "Execute anonymization scripts over a table"
authors = ["Daniel Mathiot <d.danymat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
pandas = "^1.2.4"
numpy = "^1.20.2"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
anon = "insanonym_utils.main:main"
